After save input text in the array, click edit button to edit mode

--- a/todo/src/components/_TodoInfo.scss
+++ b/todo/src/components/_TodoInfo.scss
@@ -4,3 +4,10 @@
     margin: 8px;
     background-color: white;
 }
+
+.input{
+    width: 365px;
+    height: 30px;
+    float: left;
+    margin-left: 5%;
+}
