--- a/todo/src/_App.scss
+++ b/todo/src/_App.scss
@@ -1,9 +1,15 @@
 .App{
     max-width: 500px;
+    top : -100px;
     margin: 10em auto;
-    height: 500px;
+    height: 800px;
     display: block;
     position: relative;
     overflow: hidden;
-    background-color: yellow;
+    background-color: white;
+    border: 1px solid gray;
+    
+    .App-header{
+        margin : 3%;
+    }
 }
