--- a/todo/src/_App.scss
+++ b/todo/src/_App.scss
@@ -2,14 +2,24 @@
     max-width: 500px;
     top : -100px;
     margin: 10em auto;
+    margin-bottom: -10em;
     height: 800px;
     display: block;
     position: relative;
-    overflow: hidden;
     background-color: white;
     border: 1px solid gray;
     
     .App-header{
         margin : 3%;
+    }
+
+    .App-main{
+        height: 700px;
+        display: block;
+        overflow:auto;
+
+        &::-webkit-scrollbar-track {
+            background-color: lightblue;
+          }
     }
 }
