--- a/todo/src/components/_TodoInfo.scss
+++ b/todo/src/components/_TodoInfo.scss
@@ -1,26 +1,28 @@
 .App-list{
-    border: 0.5px solid gray;
+    border-bottom: 0.2px solid gray;
     padding: 8px;
-<<<<<<< Updated upstream
-    margin: 8px;
-    background-color: white;
-}
-=======
-    margin: 2em;
+    margin: {
+        right : 2em;
+        left : 2em;
+        top : 1em;
+    }
     background-color:white;
     display : flex;
     width : 85%;
+    height : 30px;
 
     .list {
         flex :1;
         display : flex;
     }
-}
 
-// .input{
-//     width: 365px;
-//     height: 30px;
-//     float: left;
-//     margin-left: 5%;
-// }
->>>>>>> Stashed changes
+    button{
+        color: #fff !important;
+        text-transform: uppercase;
+        background:  #1AAB8A;
+        padding: 5px 10px 5px 10px;
+        border-radius: 30px;
+        border: none;
+        margin: -3px 3px 5px 5px;
+    }
+}
