--- a/todo/src/components/_TodoInfo.scss
+++ b/todo/src/components/_TodoInfo.scss
@@ -14,6 +14,12 @@
     .list {
         flex :1;
         display : flex;
+
+        .editArea{
+          width : 100%;
+          height : 100%;
+          margin-top : -10px;
+        }
     }
 
     button{
