--- a/todo/src/components/TodoList/TodoList.css
+++ b/todo/src/components/TodoList/TodoList.css
@@ -13,12 +13,20 @@
     flex :1;
     display : flex;
 }
-.editArea{
-          width : 100%;
-          height : 100%;
-          margin-top : -10px;
+
+.todo-text{
+    font-size: 20px;
+    padding : 0px 10px;
+    font-weight: bold;
 }
-button{
+
+.editArea{
+    width : 100%;
+    height : 100%;
+    margin-top : -10px;
+}
+.item-button{
+    font-weight: bold;
     color: #fff !important;
     text-transform: uppercase;
     background:  #1AAB8A;
